testdata/baselines/reference/compiler/jsdocBackslash.errors.txt
test.js(2,4): error TS1127: Invalid character.


==== test.js (1 errors) ====
    /**
     * \
       ~
!!! error TS1127: Invalid character.
     */
    function foo() {}
    